--- a/amazon.html
+++ b/amazon.html
@@ -60,5 +60,6 @@
     </div>
 
     <script type="module" src="scripts/amazon.js"></script>
+    <!-- modules are used to import data from another file-->
   </body>
 </html>
